--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<title>MovieInfo</title>
 	<link rel="stylesheet" type="text/css" href="https://bootswatch.com/superhero/bootstrap.min.css">
+	<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
@@ -28,6 +29,14 @@
     </div>
 
 
+    <div class="footer">
+      <div class="footer-container">
+              <a href='https://www.facebook.com/poragratul' target="_blank"><i class="fa fa-facebook fa-2x fa-fw"></i></a>
+              <a href='https://github.com/abinhasan/' target="_blank"><i class="fa fa-github fa-2x fa-fw"></i></a>
+              <a href='https://www.linkedin.com/in/abinhasan/' target="_blank"><i class="fa fa-linkedin fa-2x fa-fw"></i></a>
+            </span>
+      </div>
+    </div>
 
     <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
   	<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
